JS done - issues with images not showing

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
   background: var(--light);
 }
 
-.container{
+.container {
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -35,7 +35,7 @@ body{
   background-color: var(--dark);
 }
 
-.gem{
+.gem {
   position: relative;
   width: 15rem;
   height: 15rem;
@@ -43,50 +43,51 @@ body{
   transform-style: preserve-3d;
 }
 
-.gem div{
+.gem div {
   width: 100%;
   height: 100%;
+  border: 2px solid black;
   border-radius: 50%;
   backface-visibility: hidden;
   background-size: contain;
   position: absolute;
 }
 
-.sapphire {
+.sapphires {
   background-image: url('./images/sapphire.png');
 }
 
-.animate-sapphire{
-  animation: spinSapphire 3s;
+.animate-sapphires {
+  animation: spinSapphires 3s;
   animation-fill-mode: forwards;
 }
 
-@keyframes spinSapphire {
+@keyframes spinSapphires {
 
-  from{
+  from {
       transform: rotateY(0deg);
   }
 
-  to{
+  to {
       transform: rotateY(1800deg);
   }
 }
 
-.ruby{
+.rubies {
   background-image: url('./images/ruby.png');
   transform: rotateY(-180deg);
 }
 
-.animate-ruby{
-  animation: spinRuby 3s;
+.animate-rubies {
+  animation: spinRubies 3s;
   animation-fill-mode: forwards;
 }
 
-@keyframes spinRuby {
-  from{
+@keyframes spinRubies {
+  from {
       transform: rotateY(0deg);
   }
-  to{
+  to {
       transform: rotateY(1620deg);
   }
  
